# ipam_monolithic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  initdb.sql
src/: lib.rs  main.rs  trace_layer.rs
src/database/: convert.rs  mod.rs  repository.rs  utils.rs
src/handler/: auth.rs  device.rs  error.rs  http.rs  mod.rs  models_data_entry.rs  network.rs  query_params.rs  service.rs  services.rs
src/models/: device.rs  mod.rs  network.rs  service.rs  user.rs  utils.rs
src/services/: mod.rs
src/user/: mod.rs
static/: device.exist.js  device.js  main.css  main.js  network.js  network_exists.js  new_network.js
templates/: device.tera  device.tera.html  devices.html  fallback.html  index.html  login.html  network.html  network.tera.html
