[package]
name = "api_ipam"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
bcrypt = "0.15.1"
dotenv = "0.15.0"
futures = "0.3.31"
ipnet = { version = "2.10.1", features = ["serde"] }
jsonwebtoken = "9.3.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = { version = "0.32.1", features = ["time", "uuid"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["serde", "v4"] }